--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ rgba(255, 255, 255, 0.6)
     --white-text-color: #FFFFFF;
     --white-transparent-text-color: rgba(255, 255, 255, 0.6);
 
+    --page-bg: #E5E5E5;
     --primary-bg-color: #FFFFFF;
     --secondary-bg-color: #F5F4FA;
     --thirdary-bg-color: #2F303A;
@@ -37,6 +38,10 @@ rgba(255, 255, 255, 0.6)
 
 .link {
     text-decoration-line: none;
+
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: linear;
 }
 
 .text {
@@ -46,7 +51,9 @@ rgba(255, 255, 255, 0.6)
 
 .flex {
     display: flex;
+    flex-wrap: wrap;
 }
+
 /*  */
 
 html {
@@ -61,18 +68,20 @@ html {
 
 body {
     color: var(--secondary-text-color);
-    background-color: var(--primary-bg-color);
+    background-color: var(--page-bg);
+    /* background-color: var(--primary-bg-color); */
     font-family: Roboto, sans-serif;
     font-weight: 400;
     font-size: 14px;
     letter-spacing: 0.03em;
+    display: block;
 }
 
 .button {
-    border-radius: 4px;
     min-width: 200px;
     background-color: #FFFFFF;
     border: 1px solid transparent;
+    border-radius: 4px;
     color: #000000;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
@@ -81,7 +90,6 @@ body {
     display: inline-block;
     padding: 11px 32px;
     padding-top: 9px;
-
     background-color: var(--accent-background);
     color: var(--white-text-color);
     font-weight: 700;
@@ -100,7 +108,7 @@ body {
     padding-left: 15px;
     margin: 0 auto;
     width: 1600px;
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
 }
 
 /* Logo */
@@ -121,7 +129,13 @@ footer .logo {
     color: #FFFFFF;
 }
 
+/*  */
+
 /* Хедер */
+header {
+    background-color: var(--primary-bg-color);
+}
+
 .site-nav,
 .header-address {
     display: flex;
@@ -167,7 +181,7 @@ footer .logo {
 }
 
 .address {
-    margin-left: auto;
+    margin-left: 332px;
 }
 
 .header-mail,
@@ -187,6 +201,16 @@ footer .logo {
     color: var(--accent-color);
 }
 
+.nav {
+    margin-left: auto;
+}
+
+.address {
+    margin-right: auto;
+}
+
+/*  */
+
 /* Герой */
 .hero {
     padding-top: 200px;
@@ -205,6 +229,7 @@ footer .logo {
     line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
+    text-transform: uppercase;
     /* min-width: 696px; */
 }
 
@@ -218,17 +243,49 @@ footer .logo {
     text-align: center;
 }
 
-/* Особенности */
+/*  */
 
+/* Особенности */
 .section-features {
     padding-top: 94px;
     padding-bottom: 94px;
+
+    background-color: var(--primary-bg-color);
+}
+
+.section-features .section-title {
+    visibility: hidden;
+    margin-top: -94px;
+}
+
+.feature-list {
+    display: flex;
+}
+
+.feature-list .item {
+    display: flex;
+    flex-wrap: wrap;
+    width: 270px;
+}
+
+.feature-list .item:first-child {
+    margin-left: auto;
+}
+
+.feature-list .item:last-child {
+    margin-right: auto;
+}
+
+.feature-list .item+.item {
+    margin-left: 30px;
 }
 
 .feature-list .title {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.17;
+
+    text-transform: uppercase;
 }
 
 .feature-list .text {
@@ -237,11 +294,34 @@ footer .logo {
     line-height: 1.71;
 }
 
+/*  */
+
 /* Чем мы занимаемся */
 .section-work {
-    padding-top: 94px;
+    padding-bottom: 94px;
     padding-top: 0px;
+
+    background-color: var(--primary-bg-color);
 }
+
+.work-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.work-list .item+.item {
+    margin-left: 30px;
+}
+
+.work-list .item:first-child {
+    margin-left: auto;
+}
+
+.work-list .item:last-child {
+    margin-right: auto;
+}
+
+/*  */
 
 /* Наша команда */
 .section-team {
@@ -249,6 +329,32 @@ footer .logo {
     padding-bottom: 94px;
 
     background-color: var(--secondary-bg-color);
+}
+
+.team-list {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+.team-list .item {
+    background-color: var(--primary-bg-color);
+    height: 368px;
+    /* border: 1px solid transparent; */
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.team-list .item+.item {
+    margin-left: 30px;
+}
+
+.team-list .item:first-child {
+    margin-left: auto;
+}
+
+.team-list .item:last-child {
+    margin-right: auto;
 }
 
 .team-list .title {
@@ -263,10 +369,16 @@ footer .logo {
     line-height: 1.17;
 }
 
+/*  */
+
 /* Футер */
 footer {
     padding-top: 60px;
     padding-bottom: 60px;
+}
+
+.footer-group {
+    margin-left: 200px;
 }
 
 .footer-address {
@@ -275,18 +387,25 @@ footer {
 }
 
 .footer-location {
+    display: inline-block;
+    margin-top: 20px;
+
     color: var(--white-text-color);
     text-decoration-line: none;
+
 }
 
 .footer-mail,
 .footer-phone {
+    display: inline-block;
+    margin-top: 9px;
+
     color: var(--white-transparent-text-color);
     text-decoration-line: none;
 }
 
-.footer-link:hover,
-.footer-link:focus {
+.footer.link:hover,
+.footer.link:focus {
     text-decoration-line: underline;
 }
 
@@ -294,3 +413,5 @@ footer {
 footer {
     background-color: var(--thirdary-bg-color);
 }
+
+/*  */
